<resources>
    <string name="app_name">Quest Logbook</string>
    <string name="qmf_new_todo">New Quest</string>
    <string name="qmf_repeat">Repeatable?</string>
    <string name="qmf_post">Post</string>
    <string name="qmf_daily">Daily</string>
    <string name="qmf_weekly">Weekly</string>
    <string name="qmf_timed">Timed</string>
    <string name="qmf_title">Enter Quest Title</string>
    <string name="qmf_desc">Enter Quest Description</string>
    <string name="qmf_time_hint">Enter Time</string>
    <string name="qmf_date_hint">Enter Date</string>
    <string name="qmf_note">Notes</string>
    <string name="qmf_week_mon">MONDAY</string>
    <string name="qmf_week_tue">TUESDAY</string>
    <string name="qmf_week_wed">WEDNESDAY</string>
    <string name="qmf_week_thu">THURSDAY</string>
    <string name="qmf_week_fri">FRIDAY</string>
    <string name="qmf_week_sat">SATURDAY</string>
    <string name="qmf_week_sun">SUNDAY</string>
    <string name="quest_title">Quest Title</string>
    <string name="quest_type">Quest Type</string>
    <string name="quest_desc">Description</string>
    <string name="quest_act">Activation</string>
    <string name="quest_notes">Notes</string>
    <string name="quest_update_notes">Update Notes</string>
    <string name="quest_maker">Quest Maker</string>
    <string name="active_quests">Active Quests</string>
    <string name="quest_update_template">Update Template</string>
    <string name="quest_templates">Quest Templates</string>
    <string name="default_date">MM-DD-YYYY</string>
    <string name="default_time">HH:MM</string>
    <string name="default_btn_text">set</string>
    <string name="main_sort_text">Sort by:</string>
    <string name="main_sort_abc">ABC</string>
    <string name="main_sort_time">Oldest</string>
    <string name="edit">EDIT</string>
</resources>