<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestMakerForm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/qmf_new_todo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/formTitleET"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/qmf_title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/formPostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/qmf_post"
        app:layout_constraintStart_toEndOf="@+id/formTitleET"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/formRepeatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/qmf_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formTitleET" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/formQuestType"
        android:layout_width="202dp"
        android:layout_height="105dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/formRepeatBtn"
        app:layout_constraintTop_toBottomOf="@+id/formTitleET"
        app:singleLine="false"
        app:singleSelection="true"
        tools:visibility="invisible">

        <com.google.android.material.chip.Chip
            android:id="@+id/formDailyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/qmf_daily"
            android:textAlignment="center"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formWeeklyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/qmf_weekly"
            android:textAlignment="center"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formScheduleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/qmf_timed"
            android:textAlignment="center"
            app:checkedIconVisible="true" />
    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/formDescET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/qmf_desc"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formDateET"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/formTimeET"
        android:layout_width="202dp"
        android:layout_height="49dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/qmf_time_hint"
        android:inputType="time"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formQuestType"
        tools:visibility="invisible"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/formDateET"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/qmf_date_hint"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formTimeET"
        tools:visibility="invisible"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/forNotesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/qmf_note"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formDescET"
        android:importantForAutofill="no" />

    <ScrollView
        android:id="@+id/formWeeklyDates"
        android:layout_width="122dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formRepeatBtn"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_mon" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_tue" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_wed" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_thu" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_fri" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_sat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/qmf_week_sun" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>