<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editQuestTypeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_type"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/quest_title" />

        <EditText
            android:id="@+id/editQuestTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quest_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/quest_title"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/quest_desc" />

        <EditText
            android:id="@+id/editQuestDescEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quest_desc"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/quest_desc"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/quest_notes" />

        <EditText
            android:id="@+id/editQuestNotesEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/quest_notes"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/quest_notes" />
    </LinearLayout>

    <Button
        android:id="@+id/editQuestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest_update_template" />
</LinearLayout>